--- a/Reply2018Final.csproj
+++ b/Reply2018Final.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="input\" />
+  </ItemGroup>
+
 </Project>
